<resources>
    <string name="google_analytics_id" translatable="false">UA-XXXXXXXX-Y</string>
    <string name="app_name" translatable="false">Quiniela Virtual</string>
    <string name="see_tutorial">See tutorial</string>
    <string name="my_profile">My profile</string>
    <string name="ok">OK</string>
    <string name="password">Password</string>
    <string name="accept">Accept</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="you">You</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="log_out">Log out</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="loading">Loading…</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="log_out_question">Do you want to log out?</string>
    <string name="username">Username</string>
    <string name="users">Users</string>
    <string name="no_users">No users</string>
    <string name="skip_tutorial">skip tutorial!</string>
    <string name="tutorial_1">This is the first sample text, do you like it?</string>
    <string name="tutorial_2">And now it comes the second one! Wow, awesome!</string>
    <string name="tutorial_3">I never liked the third text, just ignore it…</string>
    <string name="tutorial_4">And finally, the last one, hope you enjoyed it!</string>

    <!--View Login-->
    <string name="log_text_or">or</string>
    <string name="email">Email</string>
    <string name="forgot_password">forgot password?</string>
    <string name="recover_password">Recover your password</string>

    <!--Social network-->
    <string name="action_cancelled">action cancelled</string>
    <!--Facebook String-->
    <string name="app_id" translatable="false">1615159335392893</string>
    <!--Google+-->
    <!-- Rationale for asking for Contacts -->
    <string name="contacts_permission_rationale">Contacts access is needed in order to retrieve your email address.</string>
</resources>
