<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/login_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_dark">

    <include layout="@layout/toolbar_layout" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/toolbar"
        android:orientation="vertical">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:background="@drawable/quinielavirtual_logo"
            android:contentDescription="@string/app_name" />

        <TextView
            style="@style/extraHugeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/log_in"
            android:textColor="@color/black_overlay" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/padding"
            android:paddingRight="@dimen/padding"
            android:paddingTop="@dimen/padding">

            <com.facebook.login.widget.LoginButton xmlns:facebook="http://schemas.android.com/apk/res-auto"
                android:id="@+id/login_button_facebook"
                android:layout_width="@dimen/image_social_network_facebook"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginTop="-4dp"
                facebook:com_facebook_login_text="" />

            <com.google.android.gms.common.SignInButton
                android:id="@+id/login_btn_google"
                android:layout_width="@dimen/image_social_network_google"
                android:layout_height="@dimen/image_extra_big"
                android:layout_gravity="center"
                android:layout_marginTop="-3dp"
                android:paddingLeft="@dimen/padding"
                android:textSize="15pt" />

            <com.twitter.sdk.android.core.identity.TwitterLoginButton
                android:id="@+id/login_btn_twitter"
                android:layout_width="@dimen/image_social_network_twitter"
                android:layout_height="@dimen/image_big_2"
                android:layout_centerInParent="true"
                android:layout_marginTop="-10dp"
                android:layout_marginLeft="@dimen/padding" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="@dimen/padding"
            android:paddingRight="@dimen/padding"
            android:paddingTop="@dimen/padding">

            <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:shrinkColumns="*"
                android:stretchColumns="*">

                <!-- Row 2 with 3 columns -->
                <TableRow
                    android:id="@+id/tableRow1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        style="?android:attr/listSeparatorTextViewStyle"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="@dimen/login_line"
                        android:background="@color/primary" />

                    <TextView
                        style="?android:attr/listSeparatorTextViewStyle"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="@dimen/login_line"
                        android:background="@color/primary" />

                    <TextView
                        style="?android:attr/listSeparatorTextViewStyle"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="@dimen/login_line"
                        android:background="@color/primary" />

                    <TextView
                        style="?android:attr/listSeparatorTextViewStyle"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="@dimen/login_line"
                        android:background="@color/primary" />

                    <TextView
                        style="@style/mediumText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="or"
                        android:textAlignment="center"
                        android:textColor="@color/black" />

                    <TextView
                        style="?android:attr/listSeparatorTextViewStyle"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="@dimen/login_line"
                        android:background="@color/primary" />

                    <TextView
                        style="?android:attr/listSeparatorTextViewStyle"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="@dimen/login_line"
                        android:background="@color/primary" />

                    <TextView
                        style="?android:attr/listSeparatorTextViewStyle"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="@dimen/login_line"
                        android:background="@color/primary" />

                    <TextView
                        style="?android:attr/listSeparatorTextViewStyle"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="@dimen/login_line"
                        android:background="@color/primary" />
                </TableRow>
            </TableLayout>

            <LinearLayout
                android:id="@+id/email_login_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <AutoCompleteTextView
                        android:id="@+id/usernameEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/username"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/passwordEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:imeActionId="@+id/login"
                        android:imeActionLabel="@string/log_in"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/forgotTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:paddingTop="@dimen/padding"
                android:text="@string/forgot_password"
                android:textColor="@color/primary" />

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
